--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ra1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ruslanraindrop.github.io/react11",
+  "homepage": "https://ruslanraindrop.github.io/react1.1",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,6 +13,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest --passWithNoTests",
